--- a/index.html
+++ b/index.html
@@ -1,21 +1,33 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-
-    <canvas id="bg"></canvas>
-    <input type="range" min="0" max="100" value="0" class="slider" id="cohesion">
-    <p>Value: <span id="cohesion-value"></span></p>
-    <input type="range" min="0" max="100" value="0" class="slider" id="alignment">
-    <p>Value: <span id="alignment-value"></span></p>
-    <input type="range" min="0" max="100" value="0" class="slider" id="repulsion">
-    <p>Value: <span id="repulsion-value"></span></p>
-    <div id="app"></div>
-    <script type="module" src="/js/main.js"></script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Arthur Wuhrlin - Portfolio</title>
+    <link rel="stylesheet" href="./style.css">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    </head>
+<body>
+    <button id="theme-toggle">Toggle Theme</button>
+    <main>
+        <header>
+            <h1>I'm <span class="indie-flower-regular">Arthur Wuhrlin</span></h1>
+            <h2>Étudiant ingénieur à Telecom Paris et à la National University of Singapore</h2>
+        </header>
+        <section class="intro">
+            <p>Passionné par les <strong>computer graphics</strong> et plus particulièrement par les technologies de rendu comme le <strong>Raytracing</strong> et l'éclairage.</p>
+        </section>
+        <section class="contact">
+            <p><a href="https://www.linkedin.com/in/arthur-wuhrlin" target="_blank">LinkedIn</a></p>
+            <p>Email: <span id="email"></span></p>
+            <p><a href="path/to/CV.pdf" target="_blank">Mon CV</a></p>
+        </section>
+    </main>
+    <canvas id="c"></canvas>
+    <script type="module" src="js/three/main.js"></script>
+    <script type="module" src="js/content/theme.js"></script>
+</body>
 </html>
