--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <button id="theme-toggle">Toggle Theme</button>
     <main>
         <header>
-            <h1>I'm <span class="indie-flower-regular">Arthur Wuhrlin</span></h1>
+            <h1>Hi, I'm <span class="indie-flower-regular">Arthur Wuhrlin</span></h1>
             <h2>Étudiant ingénieur à Telecom Paris et à la National University of Singapore</h2>
         </header>
         <section class="intro">
