--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             </a>
         </div>
         <div class="controls">
-            <button id="theme-toggle">Switch to Light Mode</button>
-            <button id="language-toggle">EN</button>
+            <button id="theme-toggle" class="eb-garamond">Switch to Light Mode</button>
+            <button id="language-toggle" class="eb-garamond">EN</button>
         </div> 
     </div> 
     <main>
