Changed to relative path

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         </section>
     </main>
     <canvas id="c"></canvas>
-    <script type="module" src="js/three/main.js"></script>
-    <script type="module" src="js/content/theme.js"></script>
+    <script type="module" src="./js/three/main.js"></script>
+    <script type="module" src="./js/content/theme.js"></script>
     <script>
                 // Language toggle functionality
                 const languageToggleBtn = document.getElementById('language-toggle');
