--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-control" content="public">
+
 
     <title>Arthur Wuhrlin - Portfolio</title>
     <link rel="stylesheet" href="./style.css">
@@ -14,6 +16,9 @@
             }
         }
     </script>
+
+    <script type="module" src="./js/three/main.js"></script>
+    <script type="module" src="./js/content/theme.js"></script>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -55,8 +60,6 @@
         </section>
     </main>
     <canvas id="c"></canvas>
-    <script type="module" src="./js/three/main.js"></script>
-    <script type="module" src="./js/content/theme.js"></script>
     <script>
                 // Language toggle functionality
                 const languageToggleBtn = document.getElementById('language-toggle');
