--- a/index.html
+++ b/index.html
@@ -3,11 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Cache-control" content="public">
-
-
-    <title>Arthur Wuhrlin - Portfolio</title>
-    <link rel="stylesheet" href="./style.css">
 
     <script type="importmap">
         {
@@ -28,6 +23,10 @@
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Shadows+Into+Light&display=swap" rel="stylesheet">
 
+        <title>Arthur Wuhrlin - Portfolio</title>
+        <link rel="icon" href="./img/favicon.jpg">
+
+        <link rel="stylesheet" href="./style.css">
     </head>
 <body>
     <div class="header-bar">
