Cleaned three files

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
             }
         }
     </script>
-
-    <script type="module" src="./js/three/main.js"></script>
+        <script type="module" src="./js/three/boidSim.js"></script>
     <script type="module" src="./js/content/theme.js"></script>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
