--- a/index.html
+++ b/index.html
@@ -29,29 +29,39 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <div class="header-bar">
-            <div class="social-icons">
-                <a href="https://www.linkedin.com/in/arthur-wuhrlin" target="_blank" class="icon-link">
-                    <img src="img\linkedin_logo.svg" alt="LinkedIn" class="icon">
-                </a>
-                <a href="https://github.com/JudasBricot" target="_blank" class="icon-link">
-                    <img src="img\github_logo.svg" alt="GitHub" class="icon">
-                </a>
-                <a href="mailto:arthur.wuhrlin@nus.edu.sg" target="_blank" id="email" class="icon-link">
-                    <img src="img\email_logo.svg" alt="Mail" class="icon">
-                </a>
+        <div class="container-col">
+            <nav class="horizontal-bar" id="home-bar">
+                <ul class="button-container">
+                    <li class="home">Home</li>
+                    <li class="projects">Projects</li>
+                    <li class="blog">blog</li>
+                    <li class="about">About</li>
+                </ul>
+            </nav> 
+            <div class="content">
+                <header>
+                    <h1 class="text-title" data-translate="title">Bonjour, je suis <span class="text-title-name-fr">Arthur Wuhrlin</span></h1>
+                    <h2 class="text" data-translate="subtitle">Et voici mon Portfolio</h2>
+                </header>
             </div>
-            <div class="controls">
-                <button id="theme-toggle" data-translate="theme">Light Mode</button>
-                <button id="language-toggle">FR</button>
+            <div class="horizontal-bar">
+                <div class="button-container" id="social-icons">
+                    <a href="https://www.linkedin.com/in/arthur-wuhrlin" target="_blank" class="icon-link">
+                        <img src="img\linkedin_logo.svg" alt="LinkedIn" class="icon">
+                    </a>
+                    <a href="https://github.com/JudasBricot" target="_blank" class="icon-link">
+                        <img src="img\github_logo.svg" alt="GitHub" class="icon">
+                    </a>
+                    <a href="mailto:arthur.wuhrlin@nus.edu.sg" target="_blank" id="email" class="icon-link">
+                        <img src="img\email_logo.svg" alt="Mail" class="icon">
+                    </a>
+                </div>
+                <div class="button-container" id="controls">
+                    <button id="theme-toggle" data-translate="theme">Light Mode</button>
+                    <button id="language-toggle">FR</button>
+                </div> 
             </div> 
-        </div> 
-        <main>
-            <header>
-                <h1 class="text-title" data-translate="title">Bonjour, je suis <span class="text-title-name-fr">Arthur Wuhrlin</span></h1>
-                <h2 class="text" data-translate="subtitle">Et voici mon Portfolio</h2>
-            </header>
-        </main>
+       </div>
         <canvas id="c"></canvas>
     </body>
 </html>
