--- a/projects.html
+++ b/projects.html
@@ -39,10 +39,8 @@
                 </ul>
             </nav> 
             <div class="content">
-                <header>
-                    <h1 class="text-title" data-translate="title">Bonjour, je suis <span class="text-title-name-fr">Arthur Wuhrlin</span></h1>
-                    <h2 class="text" data-translate="subtitle">Et voici mon Portfolio</h2>
-                </header>
+                <!-- WIP -->
+                <h2 class="text">Projects : Work in progress</h2>
             </div>
             <div class="horizontal-bar">
                 <div class="button-container" id="social-icons">
