--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
         <title>Arthur Wuhrlin - Portfolio</title>
         <link rel="icon" href="./img/favicon.jpg">
 
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
         <div class="container-col">
             <nav class="horizontal-bar" id="home-bar">
                 <ul class="button-container">
-                    <li class="home"><a href="index.html">Home</a></li>
+                    <li class="home"><a>Home</a></li>
                     <li class="projects"><a href="projects.html">Projects</a></li>
                     <li class="blog"><a href="blog.html">Blog</a></li>
                     <li class="about"><a href="about.html">About</a></li>
                 </ul>
             </nav> 
             <div class="content">
-                <header>
+                <div>
                     <h1 class="text-title" data-translate="title">Bonjour, je suis <span class="text-title-name-fr">Arthur Wuhrlin</span></h1>
-                    <h2 class="text" data-translate="subtitle">Et voici mon Portfolio</h2>
-                </header>
+                    <h2 data-translate="subtitle">Et voici mon Portfolio</h2>
+                </div>
             </div>
             <div class="horizontal-bar">
                 <div class="button-container" id="social-icons">
