--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
         <title>Arthur Wuhrlin - Portfolio</title>
         <link rel="icon" href="./img/favicon.jpg">
 
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
         <div class="container-col">
@@ -34,7 +34,7 @@
                 <ul class="button-container">
                     <li class="home"><a href="index.html">Home</a></li>
                     <li class="projects"><a href="projects.html">Projects</a></li>
-                    <li class="blog"><a href="blog.html">Blog</a></li>
+                    <li class="blog"><a>Blog</a></li>
                     <li class="about"><a href="about.html">About</a></li>
                 </ul>
             </nav> 
