--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
+
+
+
+
         
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +19,8 @@
 
         <title>Arthur Wuhrlin - Portfolio</title>
         <link rel="icon" href="/assets/favicon-DZJYdhM_.jpg">
-
+
+
         <script type="importmap">
             {
                 "imports": {
@@ -32,9 +36,9 @@
             <nav class="horizontal-bar" id="home-bar">
                 <ul class="button-container">
                     <li class="home"><a>Home</a></li>
-                    <li class="projects"><a href="projects.html">Projects</a></li>
-                    <li class="blog"><a href="blog.html">Blog</a></li>
-                    <li class="about"><a href="about.html">About</a></li>
+                    <li class="projects"><a href="./html/projects.html">Projects</a></li>
+                    <li class="blog"><a href="./html/blog.html">Blog</a></li>
+                    <li class="about"><a href="./html/about.html">About</a></li>
                 </ul>
             </nav> 
             <div class="content">
