--- a/about.html
+++ b/about.html
@@ -31,17 +31,15 @@
         <div class="container-col">
             <nav class="horizontal-bar" id="home-bar">
                 <ul class="button-container">
-                    <li class="home"><a>Home</a></li>
+                    <li class="home"><a href="./index.html">Home</a></li>
                     <li class="projects"><a href="./projects.html">Projects</a></li>
                     <li class="blog"><a href="./blog.html">Blog</a></li>
-                    <li class="about"><a href="./about.html">About</a></li>
+                    <li class="about"><a>About</a></li>
                 </ul>
             </nav> 
             <div class="content">
-                <div>
-                    <h1 class="text-title" data-translate="title">Bonjour, je suis <span class="text-title-name-fr">Arthur Wuhrlin</span></h1>
-                    <h2 data-translate="subtitle">Et voici mon Portfolio</h2>
-                </div>
+                <!-- WIP -->
+                <h2 class="text">About : Work in progress</h2>
             </div>
             <div class="horizontal-bar">
                 <div class="button-container" id="social-icons">
