--- a/about.html
+++ b/about.html
@@ -32,9 +32,9 @@
         <div class="container-col">
             <nav class="horizontal-bar" id="home-bar">
                 <ul class="button-container">
-                    <li class="home"><a href="index.html">Home</a></li>
-                    <li class="projects"><a href="projects.html">Projects</a></li>
-                    <li class="blog"><a href="blog.html">Blog</a></li>
+                    <li class="home"><a href="./index.html">Home</a></li>
+                    <li class="projects"><a href="./projects.html">Projects</a></li>
+                    <li class="blog"><a href="./blog.html">Blog</a></li>
                     <li class="about"><a>About</a></li>
                 </ul>
             </nav> 
