--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <nav class="horizontal-bar" id="home-bar">
                 <ul class="button-container">
                     <li class="home"><a>Home</a></li>
-                    <li class="projects"><a href="projects.html">Projects</a></li>
-                    <li class="blog"><a href="blog.html">Blog</a></li>
-                    <li class="about"><a href="about.html">About</a></li>
+                    <li class="projects"><a href="./projects.html">Projects</a></li>
+                    <li class="blog"><a href="./blog.html">Blog</a></li>
+                    <li class="about"><a href="./about.html">About</a></li>
                 </ul>
             </nav> 
             <div class="content">
