--- a/blog.html
+++ b/blog.html
@@ -32,10 +32,10 @@
         <div class="container-col">
             <nav class="horizontal-bar" id="home-bar">
                 <ul class="button-container">
-                    <li class="home"><a href="index.html">Home</a></li>
-                    <li class="projects"><a href="projects.html">Projects</a></li>
+                    <li class="home"><a href="./index.html">Home</a></li>
+                    <li class="projects"><a href="./projects.html">Projects</a></li>
                     <li class="blog"><a>Blog</a></li>
-                    <li class="about"><a href="about.html">About</a></li>
+                    <li class="about"><a href="./about.html">About</a></li>
                 </ul>
             </nav> 
             <div class="content">
