--- a/blog.html
+++ b/blog.html
@@ -24,8 +24,8 @@
                 }
             }
         </script>
-      <script type="module" crossorigin src="/assets/style-gTrBdrTd.js"></script>
-      <link rel="stylesheet" crossorigin href="/assets/style-CpVuswQo.css">
+      <script type="module" crossorigin src="/assets/style-BOVLfhvr.js"></script>
+      <link rel="stylesheet" crossorigin href="/assets/style-Cmu0r8h8.css">
     </head>
     <body>
         <div class="container-col">
