--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
+
         
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,20 +24,20 @@
                 }
             }
         </script>
-      <script type="module" crossorigin src="/assets/style-BOVLfhvr.js"></script>
-      <link rel="stylesheet" crossorigin href="/assets/style-Cmu0r8h8.css">
+      <script type="module" crossorigin src="/assets/main-D4by1wv4.js"></script>
+      <link rel="stylesheet" crossorigin href="/assets/main-Cmu0r8h8.css">
     </head>
     <body>
         <div class="container-col">
             <nav class="horizontal-bar" id="home-bar">
                 <ul class="button-container">
-                    <li class="home"><a>Home</a></li>
-                    <li class="projects"><a href="./projects.html">Projects</a></li>
-                    <li class="blog"><a href="./blog.html">Blog</a></li>
-                    <li class="about"><a href="./about.html">About</a></li>
+                    <li class="home"><button id="home-btn">Home</button></li>
+                    <li class="projects"><button id="projects-btn">Projects</button></li>
+                    <li class="blog"><button id="blog-btn">Blog</button></li>
+                    <li class="about"><button id="about-btn">About</button></li>
                 </ul>
             </nav> 
-            <div class="content">
+            <div class="content" id="content">
                 <div>
                     <h1 class="text-title" data-translate="title">Bonjour, je suis <span class="text-title-name-fr">Arthur Wuhrlin</span></h1>
                     <h2 data-translate="subtitle">Et voici mon Portfolio</h2>
