Fixed bad image path

--- a/html/page_content/projects.html
+++ b/html/page_content/projects.html
@@ -3,7 +3,7 @@
       <div class="text-hover-zoom"><h2><a href="https://github.com/JudasBricot/2D-RayTracing-Island">🏝️ Island Generation and Raycasting 🏝️</a></h2></div>
 
       <div class="image-container">
-          <img src="./img/project-isld-thumbnail-400.jpg">
+          <img src="../../img/project-isld.jpg">
       </div>                                                
       <p>In this project, I used Unity to develop a simple Island generator. The islands are generated using my own implementation of the Perlin noise algorithm, combined with a falloff technique that ensures the border of the map is always water.</p>
       <p>Additionally, I implemented a raytracing effect on the CPU, which applies shadows to all the pixels on the map, enhancing the visual realism of the generated islands.</p>
@@ -13,7 +13,7 @@
       <div class="text-hover-zoom"><h2><a href="https://github.com/JudasBricot/Simple-Game-Engine/tree/fft-ocean">🌊 Simulating Ocean 🌊</a></h2></div>
       
       <div class="image-container">
-          <img src="./img/project-wvs-thumbnail-400.png">
+          <img src="../../img/project-wvs.png">
       </div>
 
       <p>This project is an implementation and improvement of J. Tessendorf's paper 'Simulating Ocean'. It is built upon a simple 2D OpenGL engine that I implemented following TheCherno tutorials. I added some elements to be able to render in 3D.</p>
@@ -24,7 +24,7 @@
       <div class="text-hover-zoom"><h2><a href="https://github.com/Skyepulse/FluidSimulatorGame/tree/x64-release-files">🫗 GlassOverflow</a></h2></div>
       
       <div class="image-container">
-          <img src="./img/project-gls-0.png">
+          <img src="../../img/project-gls.png">
       </div>
 
       <p>This is a school group project that features 2D real-time fluid simulation. I was in charge of designing and implementing the 2D engine.</p>
