--- a/html/page_content/projects.html
+++ b/html/page_content/projects.html
@@ -1,4 +1,4 @@
-<div class="box-container">
+<div class="box-container" class="box-container-flex-grid">
   <div class="box">
       <div class="text-hover-zoom"><h2><a href="https://github.com/JudasBricot/2D-RayTracing-Island">🏝️ Island Generation and Raycasting 🏝️</a></h2></div>
 
@@ -21,7 +21,7 @@
       
   </div>
   <div class="box">
-      <div class="text-hover-zoom"><h2><a href="https://github.com/Skyepulse/FluidSimulatorGame/tree/x64-release-files">🫗 GlassOverflow</a></h2></div>
+      <div class="text-hover-zoom"><h2><a href="https://github.com/Skyepulse/FluidSimulatorGame/tree/x64-release-files">🫗 GlassOverflow 🫗</a></h2></div>
       
       <div class="image-container">
           <img src="/assets/project-gls-CEwRO4Nl.png">
