--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 }
             }
         </script>
-      <script type="module" crossorigin src="/assets/main-CFU_antf.js"></script>
-      <link rel="stylesheet" crossorigin href="/assets/main-D-H8jJTv.css">
+      <script type="module" crossorigin src="/assets/main-CFZqBdX_.js"></script>
+      <link rel="stylesheet" crossorigin href="/assets/main-CWAaDmVI.css">
     </head>
     <body>
         <div class="container-col">
@@ -34,8 +34,8 @@
                 <ul class="button-container">
                     <li class="home"><button id="home-btn">Home</button></li>
                     <li class="projects"><button id="projects-btn">Projects</button></li>
-                    <li class="blog"><button id="blog-btn">Blog</button></li>
-                    <li class="about"><button id="about-btn">About</button></li>
+                    <!-- <li class="blog"><button id="blog-btn">Blog</button></li>
+                    <li class="about"><button id="about-btn">About</button></li> -->
                 </ul>
             </nav> 
             <div class="content" id="content">
@@ -49,7 +49,7 @@
                     <a href="https://www.linkedin.com/in/arthur-wuhrlin" target="_blank" class="icon-link">
                         <img src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='undefined'%20height='undefined'%20viewBox='0%200%2020%2020'%3e%3cpath%20fill='currentColor'%20d='M10%20.4C4.698.4.4%204.698.4%2010s4.298%209.6%209.6%209.6s9.6-4.298%209.6-9.6S15.302.4%2010%20.4zM7.65%2013.979H5.706V7.723H7.65v6.256zm-.984-7.024c-.614%200-1.011-.435-1.011-.973c0-.549.409-.971%201.036-.971s1.011.422%201.023.971c0%20.538-.396.973-1.048.973zm8.084%207.024h-1.944v-3.467c0-.807-.282-1.355-.985-1.355c-.537%200-.856.371-.997.728c-.052.127-.065.307-.065.486v3.607H8.814v-4.26c0-.781-.025-1.434-.051-1.996h1.689l.089.869h.039c.256-.408.883-1.01%201.932-1.01c1.279%200%202.238.857%202.238%202.699v3.699z'/%3e%3c/svg%3e" alt="LinkedIn" class="icon">
                     </a>
-                    <a href="https://github.com/JudasBricot" target="_blank" class="icon-link">
+                    <a href="https://github.com/arthur-wuhrlin" target="_blank" class="icon-link">
                         <img src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='undefined'%20height='undefined'%20viewBox='0%200%2024%2024'%3e%3cpath%20fill='currentColor'%20d='M12%20.297c-6.63%200-12%205.373-12%2012c0%205.303%203.438%209.8%208.205%2011.385c.6.113.82-.258.82-.577c0-.285-.01-1.04-.015-2.04c-3.338.724-4.042-1.61-4.042-1.61C4.422%2018.07%203.633%2017.7%203.633%2017.7c-1.087-.744.084-.729.084-.729c1.205.084%201.838%201.236%201.838%201.236c1.07%201.835%202.809%201.305%203.495.998c.108-.776.417-1.305.76-1.605c-2.665-.3-5.466-1.332-5.466-5.93c0-1.31.465-2.38%201.235-3.22c-.135-.303-.54-1.523.105-3.176c0%200%201.005-.322%203.3%201.23c.96-.267%201.98-.399%203-.405c1.02.006%202.04.138%203%20.405c2.28-1.552%203.285-1.23%203.285-1.23c.645%201.653.24%202.873.12%203.176c.765.84%201.23%201.91%201.23%203.22c0%204.61-2.805%205.625-5.475%205.92c.42.36.81%201.096.81%202.22c0%201.606-.015%202.896-.015%203.286c0%20.315.21.69.825.57C20.565%2022.092%2024%2017.592%2024%2012.297c0-6.627-5.373-12-12-12'/%3e%3c/svg%3e" alt="GitHub" class="icon">
                     </a>
                     <a href="mailto:arthur.wuhrlin@nus.edu.sg" target="_blank" id="email" class="icon-link">
@@ -58,7 +58,7 @@
                 </div>
                 <div class="button-container" id="controls">
                     <button id="theme-toggle" data-translate="theme">Light Mode</button>
-                    <button id="language-toggle">FR</button>
+                    <!-- <button id="language-toggle">FR</button> -->
                 </div> 
             </div> 
        </div>
