--- a/html/page_content/home.html
+++ b/html/page_content/home.html
@@ -1,4 +1,4 @@
 <div>
-  <h1 class="text-title" data-translate="title">Bonjour, je suis <span class="text-title-name-fr">Arthur Wuhrlin</span></h1>
-  <h2 data-translate="subtitle">Et voici mon Portfolio</h2>
+  <h1 class="text-title" data-translate="title">Hi, I'm <span class='text-title-name'>Arthur Wuhrlin</span></h1>
+  <h2 data-translate="subtitle">And this is my Porfolio</h2>
 </div>
