--- a/html/page_content/projects.html
+++ b/html/page_content/projects.html
@@ -16,8 +16,8 @@
           <img src="/assets/project-wvs-Dy6c5tXz.png">
       </div>
 
-      <p>This project is an implementation and improvement of J. Tessendorf's paper 'Simulating Ocean'. It is built upon a simple 2D OpenGL engine that I implemented following TheCherno tutorials. I added some elements to be able to render in 3D.</p>
-      <p>The goal was to simulate the height of a 'part' of the ocean, which means that there is no advanced water rendering, only a flat plastic shader. The height generation is done by generating a spectrum and applying a 2D Inverse Fourier Transform. This is all done on the GPU using Compute Shaders for obvious performance reasons.</p>
+      <p>This project is an implementation and improvement of J. Tessendorf's paper 'Simulating Ocean'. It is built upon a simple 2D OpenGL engine that I implemented following the Hazel Engine creator's tutorials. I added some elements to be able to render in 3D.</p>
+      <p>The goal was to simulate the height of a 'part' of the ocean, which means that there is no advanced water rendering, only a flat plastic shader. The height generation is done by generating a spectrum and applying a 2D Inverse Fourier Transform. This is all done on the GPU using Compute Shaders for performance reasons.</p>
       
   </div>
   <div class="box">
@@ -28,7 +28,6 @@
       </div>
 
       <p>This is a school group project that features 2D real-time fluid simulation. I was in charge of designing and implementing the 2D engine.</p>
-      <p>Additionally, I added a rendering pass for the game that takes the positions of the water particles and generates pixel art-styled visuals. This entire process is exclusively done on the GPU using Compute Shaders.</p>                        
-      
+      <p>Additionally, I added a render pass for the game that takes the positions of the water particles and generates pixel art-styled visuals. This entire process is exclusively done on the GPU using Compute Shaders.</p>                        
   </div>
 </div>
