--- a/html/page_content/about.html
+++ b/html/page_content/about.html
@@ -1,30 +1,1 @@
-<div class="box-container" id="vertical">
-  <div class="box" class="width-full-screen">
-    <div class="image-container">
-      <img src="/assets/test-about-me-picture-m10fRYDI.jpg">
-    </div>
-    <span class="text-title-name-fr">Arthur Wuhrlin</span></h1>
-  </div>
-
-  <div class="box">
-    <h2>Introduction</h2>
-    <p>Hey ! I am a master student in Computer Science with a Major in Computer Graphics, and a minor in Machine Learning. I am interested by a broad variety of subjects.</p>
-    <p>Firstly by The generation of visual content thanks to any science, be it Computer Science, Mathematics , Physics, ... and also for art purpose !</p>
-    <ul>
-      <li>Rendering, it's very general but it really embraces this idea of generating visual content, here from some data of a scene;</li>
-      <li>Raytracing, both real-time and offline, even though my Master's thesis is focused on real-time raytracing;</li>
-      <li>Procedural Generation : I am really curious about some of the methods used in movies and video games to create realistic landscapes and lively worlds thanks to mathematics</li>
-      <li>Generative Art : This is kind of similar to procedural generation, but the idea is to create piece of art using algorithms.</li>
-    </ul>
-
-    <p style="float:left">Secondly, I am really interested by low-level coding and computer architecture.</p>
-    <ul>
-      <li>How does a computer work ? Both physically and logically (Learnt in L2).</li>
-      <li>How is a GPU designed ? What really happens when I draw a triangle to the screen ?</li>
-    </ul>
-
-    <h2>Academic Background</h2>
-    <p>I'm currently pursuing a double diploma at both the National UNiversity of Singapore and Telecom Paris.</p>
-    <p>In Singapore, I am doing a Master by research </p>
-  <div class="box">
-</div>
+<h2 class="text">About : Work in progress</h2>
