--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Shadows+Into+Light&display=swap" rel="stylesheet">
-    <script type="module" crossorigin src="/assets/main-CstRwSkg.js"></script>
+    <script>
+      (function() {
+        var preferredTheme = localStorage.getItem('theme') || 'dark'; // Default theme is 'dark'
+        document.body.classList.add(preferredTheme);
+      })();
+    </script>
+    <script type="module" crossorigin src="/assets/main-CMX72ixm.js"></script>
     <link rel="stylesheet" crossorigin href="/assets/main-B2RLobcD.css">
   </head>
   <body>
