--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         document.body.classList.add(preferredTheme);
       })();
     </script>
-    <script type="module" crossorigin src="/assets/main-CMX72ixm.js"></script>
+    <script type="module" crossorigin src="/assets/main-DuSxS0Gq.js"></script>
     <link rel="stylesheet" crossorigin href="/assets/main-B2RLobcD.css">
   </head>
   <body>
